<resources>
    <string name="app_name">City Skyline Quiz</string>
    <string name="play_game">Play Game</string>
    <string name="city_list">City List</string>
    <string name="settings">Settings</string>
    <string name="actionbar_app_name">\t\tCity Skyline Quiz</string>
    <string name="actionbar_play_game">\t\tPlay Game</string>
    <string name="actionbar_city_list">\t\tCity List</string>
    <string name="actionbar_settings">\t\tSettings</string>
    <string name="launch_maps">Select maps app</string>
    <string name="launch_browser">Select browser app</string>
    <string name="launch_email">Select email app</string>
    <string name="more_info">More Info</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_description">Toggle between light/dark theme</string>
    <string name="settings_vibration_title">Vibration</string>
    <string name="settings_vibration_description">Disable or enable the vibration</string>
    <string name="settings_regions_title">Regions</string>
    <string name="settings_regions_description">Regions to include in the quiz</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_language_description">Ignore device language and use another</string>
    <string name="settings_scores_title">Reset scores</string>
    <string name="settings_scores_description">Clear scores from all games</string>
    <string name="clear_scores">Clear all scores?</string>
    <string name="scores_cleared">Scores cleared!</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="sort_by">Sort by:</string>
    <string name="sort_option_city">\t\tCity</string>
    <string name="sort_option_country">\t\tCountry</string>
    <string name="source_code">View source code</string>
    <string name="suggestion">Make a suggestion</string>
    <string name="report_error">Report an error</string>
    <string name="rate_app">Rate app</string>
    <string name="google_play_error">Unable to find Google Play app</string>
    <string name="timed">Timed</string>
    <string name="seconds_30">30 seconds</string>
    <string name="seconds_60">60 seconds</string>
    <string name="seconds_120">120 seconds</string>
    <string name="untimed">Untimed</string>
    <string name="questions_10">10 questions</string>
    <string name="questions_20">20 questions</string>
    <string name="questions_50">50 questions</string>
    <string name="every_city">Every city</string>
    <string name="no_faults">No faults</string>
    <string name="faults_allowed">Faults allowed</string>
    <string name="guess_message">Guess the city</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="try_again">Try Again</string>
    <string name="question">Question:</string>
    <string name="results">Results</string>
    <string name="game_menu">Game Menu</string>
    <string name="view_report">View Report</string>
    <string name="correct_answers">Correct Answers:</string>
    <string name="attempt_one">On 1 attempt</string>
    <string name="attempt_two">On 2 attempts</string>
    <string name="attempt_three">On 3 attempts</string>
    <string name="attempt_four">On 4 attempts</string>
    <string name="final_score">Final score</string>
    <string name="score">Score:</string>
    <string name="multiply">x</string>
    <string name="equal">=</string>
    <string name="new_record">New Record!</string>
    <string name="welcome">Welcome!</string>
    <string name="load_resources">Please allow a moment for the image resources to load.</string>
    <string name="ok">OK</string>
    <string name="language_disclaimer_title">Notice</string>
    <string name="language_disclaimer_message">Non-English versions of this app were translated by automated means. Apologies if translations are inaccurate. To make any corrections please email the developer using the menu in the top-right corner.</string>
    <string name="error_image_load_message">Error loading image</string>
    <string name="internet_connection_message">Please check your internet connection and try again</string>
    <string name="region_americas">The Americas</string>
    <string name="region_europe">Europe</string>
    <string name="region_asia_africa_oceania">Asia/Africa/Oceania</string>
    <string name="abu_dhabi">Abu Dhabi</string>
    <string name="albuquerque">Albuquerque</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="anchorage">Anchorage</string>
    <string name="ankara">Ankara</string>
    <string name="astana">Astana</string>
    <string name="asuncion">Asuncion</string>
    <string name="athens">Athens</string>
    <string name="atlanta">Atlanta</string>
    <string name="auckland">Auckland</string>
    <string name="austin">Austin</string>
    <string name="baku">Baku</string>
    <string name="baltimore">Baltimore</string>
    <string name="bangkok">Bangkok</string>
    <string name="barcelona">Barcelona</string>
    <string name="beijing">Beijing</string>
    <string name="beirut">Beirut</string>
    <string name="belfast">Belfast</string>
    <string name="belo_horizonte">Belo Horizonte</string>
    <string name="berlin">Berlin</string>
    <string name="birmingham">Birmingham</string>
    <string name="bogota">Bogota</string>
    <string name="boston">Boston</string>
    <string name="brisbane">Brisbane</string>
    <string name="brussels">Brussels</string>
    <string name="bucharest">Bucharest</string>
    <string name="budapest">Budapest</string>
    <string name="buenos_aires">Buenos Aires</string>
    <string name="busan">Busan</string>
    <string name="cairo">Cairo</string>
    <string name="calgary">Calgary</string>
    <string name="cali">Cali</string>
    <string name="cancun">Cancun</string>
    <string name="cape_town">Cape Town</string>
    <string name="caracas">Caracas</string>
    <string name="casablanca">Casablanca</string>
    <string name="changzhou">Changzhou</string>
    <string name="charlotte">Charlotte</string>
    <string name="chengdu">Chengdu</string>
    <string name="chicago">Chicago</string>
    <string name="chongqing">Chongqing</string>
    <string name="cincinnati">Cincinnati</string>
    <string name="cleveland">Cleveland</string>
    <string name="cologne">Cologne</string>
    <string name="copenhagen">Copenhagen</string>
    <string name="dallas">Dallas</string>
    <string name="denver">Denver</string>
    <string name="detroit">Detroit</string>
    <string name="dhaka">Dhaka</string>
    <string name="doha">Doha</string>
    <string name="donetsk">Donetsk</string>
    <string name="dortmund">Dortmund</string>
    <string name="dubai">Dubai</string>
    <string name="dublin">Dublin</string>
    <string name="dusseldorf">Dusseldorf</string>
    <string name="edinburgh">Edinburgh</string>
    <string name="edmonton">Edmonton</string>
    <string name="essen">Essen</string>
    <string name="florence">Florence</string>
    <string name="fort_worth">Fort Worth</string>
    <string name="fortaleza">Fortaleza</string>
    <string name="frankfurt">Frankfurt</string>
    <string name="fukuoka">Fukuoka</string>
    <string name="glasgow">Glasgow</string>
    <string name="gold_coast">Gold Coast</string>
    <string name="guadalajara">Guadalajara</string>
    <string name="guangzhou">Guangzhou</string>
    <string name="hamburg">Hamburg</string>
    <string name="hangzhou">Hangzhou</string>
    <string name="hanoi">Hanoi</string>
    <string name="havana">Havana</string>
    <string name="helsinki">Helsinki</string>
    <string name="ho_chi_minh_city">Ho Chi Minh City</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="honolulu">Honolulu</string>
    <string name="houston">Houston</string>
    <string name="incheon">Incheon</string>
    <string name="indianapolis">Indianapolis</string>
    <string name="istanbul">Istanbul</string>
    <string name="jacksonville">Jacksonville</string>
    <string name="jakarta">Jakarta</string>
    <string name="jersey_city">Jersey City</string>
    <string name="jerusalem">Jerusalem</string>
    <string name="johannesburg">Johannesburg</string>
    <string name="kansas_city">Kansas City</string>
    <string name="kaohsiung_city">Kaohsiung City</string>
    <string name="karachi">Karachi</string>
    <string name="kiev">Kiev</string>
    <string name="kobe">Kobe</string>
    <string name="kuala_lumpur">Kuala Lumpur</string>
    <string name="kuwait_city">Kuwait City</string>
    <string name="la_paz">La Paz</string>
    <string name="lagos">Lagos</string>
    <string name="las_vegas">Las Vegas</string>
    <string name="lima">Lima</string>
    <string name="lisbon">Lisbon</string>
    <string name="liverpool">Liverpool</string>
    <string name="london">London</string>
    <string name="los_angeles">Los Angeles</string>
    <string name="louisville">Louisville</string>
    <string name="lyon">Lyon</string>
    <string name="macau">Macau</string>
    <string name="madrid">Madrid</string>
    <string name="malmo">Malmo</string>
    <string name="manama">Manama</string>
    <string name="manchester">Manchester</string>
    <string name="manila">Manila</string>
    <string name="marseille">Marseille</string>
    <string name="mecca">Mecca</string>
    <string name="medellin">Medellin</string>
    <string name="melbourne">Melbourne</string>
    <string name="memphis">Memphis</string>
    <string name="mexico_city">Mexico City</string>
    <string name="miami">Miami</string>
    <string name="milan">Milan</string>
    <string name="milwaukee">Milwaukee</string>
    <string name="minneapolis">Minneapolis</string>
    <string name="mobile">Mobile</string>
    <string name="monaco">Monaco</string>
    <string name="monterrey">Monterrey</string>
    <string name="montevideo">Montevideo</string>
    <string name="montreal">Montreal</string>
    <string name="moscow">Moscow</string>
    <string name="mumbai">Mumbai</string>
    <string name="munich">Munich</string>
    <string name="nagoya">Nagoya</string>
    <string name="nanchang">Nanchang</string>
    <string name="nanjing">Nanjing</string>
    <string name="naples">Naples</string>
    <string name="nashville">Nashville</string>
    <string name="new_orleans">New Orleans</string>
    <string name="new_york_city">New York City</string>
    <string name="niagara_falls">Niagara Falls</string>
    <string name="oklahoma_city">Oklahoma City</string>
    <string name="orlando">Orlando</string>
    <string name="osaka">Osaka</string>
    <string name="oslo">Oslo</string>
    <string name="panama_city">Panama City</string>
    <string name="paris">Paris</string>
    <string name="pattaya">Pattaya</string>
    <string name="perth">Perth</string>
    <string name="philadelphia">Philadelphia</string>
    <string name="phnom_penh">Phnom Penh</string>
    <string name="phoenix">Phoenix</string>
    <string name="pittsburgh">Pittsburgh</string>
    <string name="portland">Portland</string>
    <string name="porto">Porto</string>
    <string name="porto_alegre">Porto Alegre</string>
    <string name="prague">Prague</string>
    <string name="pretoria">Pretoria</string>
    <string name="pyongyang">Pyongyang</string>
    <string name="qingdao">Qingdao</string>
    <string name="recife">Recife</string>
    <string name="reykjavik">Reykjavik</string>
    <string name="rio_de_janeiro">Rio De Janeiro</string>
    <string name="riyadh">Riyadh</string>
    <string name="rome">Rome</string>
    <string name="rosario">Rosario</string>
    <string name="rotterdam">Rotterdam</string>
    <string name="salt_lake_city">Salt Lake City</string>
    <string name="salvador">Salvador</string>
    <string name="san_antonio">San Antonio</string>
    <string name="san_diego">San Diego</string>
    <string name="san_francisco">San Francisco</string>
    <string name="san_juan">San Juan</string>
</resources>