<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_settings_theme"
        style="@style/SettingsItemContainerWithSwitchStyle">

        <LinearLayout style="@style/SettingsLabelsContainerWithSwitchStyle">

            <TextView
                android:id="@+id/theme_title"
                android:text="@string/settings_theme_title"
                style="@style/SettingsItemTitleStyle" />

            <TextView
                android:id="@+id/theme_description"
                android:text="@string/settings_theme_description"
                style="@style/SettingsItemDescriptionStyle" />

        </LinearLayout>

        <Switch
            android:id="@+id/switch_theme"
            style="@style/SettingsSwitchStyle" />

    </LinearLayout>

    <View style="@style/MenuItemDividerStyle" />

    <LinearLayout
        android:id="@+id/container_settings_vibration"
        style="@style/SettingsItemContainerWithSwitchStyle">

        <LinearLayout style="@style/SettingsLabelsContainerWithSwitchStyle">

            <TextView
                android:id="@+id/vibration_title"
                android:text="@string/settings_vibration_title"
                style="@style/SettingsItemTitleStyle" />

            <TextView
                android:id="@+id/vibration_description"
                android:text="@string/settings_vibration_description"
                style="@style/SettingsItemDescriptionStyle" />

        </LinearLayout>

        <Switch
            android:id="@+id/switch_vibration"
            style="@style/SettingsSwitchStyle" />

    </LinearLayout>

    <View style="@style/MenuItemDividerStyle" />

    <LinearLayout
        android:id="@+id/container_settings_language"
        style="@style/SettingsLabelsContainerStyle">

        <TextView
            android:id="@+id/language_title"
            android:text="@string/settings_language_title"
            style="@style/SettingsItemTitleStyle" />

        <TextView
            android:id="@+id/language_description"
            android:text="@string/settings_language_description"
            style="@style/SettingsItemDescriptionStyle" />

    </LinearLayout>

    <View style="@style/MenuItemDividerStyle" />

    <LinearLayout
        android:id="@+id/container_settings_scores"
        style="@style/SettingsLabelsContainerStyle">

        <TextView
            android:id="@+id/scores_title"
            android:text="@string/settings_scores_title"
            style="@style/SettingsItemTitleStyle" />

        <TextView
            android:id="@+id/scores_description"
            android:text="@string/settings_scores_description"
            style="@style/SettingsItemDescriptionStyle" />

    </LinearLayout>

    <View style="@style/MenuItemDividerStyle" />

</LinearLayout>
