<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="28dp"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:paddingStart="28dp"
            android:paddingTop="24dp"
            android:text="@string/clear_scores"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_delete"
            style="@style/ClearScoresButtonStyle"
            android:layout_alignParentRight="true"
            android:text="@string/delete" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/ClearScoresButtonStyle"
            android:layout_toLeftOf="@id/button_delete"
            android:text="@string/cancel" />

    </RelativeLayout>

</LinearLayout>