<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_container"
    style="@style/QuizAnswerChoiceLabelContainerStyle"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="12dp">

    <RelativeLayout
        android:id="@+id/container_city_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="612"
        android:gravity="center"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <ImageView
            android:id="@+id/city_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:background="@drawable/round_outline"
            android:scaleType="fitXY"
            tools:src="@drawable/los_angeles" />

        <ProgressBar
            android:id="@+id/image_progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="608"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/answer_choices_row_one"
            style="@style/QuizAnswerChoicesRowStyle">

            <LinearLayout
                android:id="@+id/answer_choice_one"
                style="@style/QuizAnswerChoiceContainerStyle"
                android:layout_marginRight="4dp">

                <ImageView
                    android:id="@+id/flag_choice_one"
                    style="@style/QuizAnswerChoiceFlagStyle"
                    tools:src="@drawable/ukraine" />

                <RelativeLayout style="@style/QuizAnswerChoiceLabelContainerStyle">

                    <TextView
                        android:id="@+id/city_name_choice_one"
                        style="@style/QuizAnswerChoiceLabelStyle"
                        tools:text="@string/kiev" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/answer_choice_two"
                style="@style/QuizAnswerChoiceContainerStyle"
                android:layout_marginLeft="4dp">

                <ImageView
                    android:id="@+id/flag_choice_two"
                    style="@style/QuizAnswerChoiceFlagStyle"
                    tools:src="@drawable/vietnam" />

                <RelativeLayout style="@style/QuizAnswerChoiceLabelContainerStyle">

                    <TextView
                        android:id="@+id/city_name_choice_two"
                        style="@style/QuizAnswerChoiceLabelStyle"
                        tools:text="@string/ho_chi_minh_city" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/answer_choices_row_two"
            style="@style/QuizAnswerChoicesRowStyle"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:id="@+id/answer_choice_three"
                style="@style/QuizAnswerChoiceContainerStyle"
                android:layout_marginRight="4dp">

                <ImageView
                    android:id="@+id/flag_choice_three"
                    style="@style/QuizAnswerChoiceFlagStyle"
                    tools:src="@drawable/united_states" />

                <RelativeLayout style="@style/QuizAnswerChoiceLabelContainerStyle">

                    <TextView
                        android:id="@+id/city_name_choice_three"
                        style="@style/QuizAnswerChoiceLabelStyle"
                        tools:text="@string/los_angeles" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/answer_choice_four"
                style="@style/QuizAnswerChoiceContainerStyle"
                android:layout_marginLeft="4dp">

                <ImageView
                    android:id="@+id/flag_choice_four"
                    style="@style/QuizAnswerChoiceFlagStyle"
                    tools:src="@drawable/colombia" />

                <RelativeLayout style="@style/QuizAnswerChoiceLabelContainerStyle">

                    <TextView
                        android:id="@+id/city_name_choice_four"
                        style="@style/QuizAnswerChoiceLabelStyle"
                        tools:text="@string/cali" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/game_progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:max="100"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:progress="0" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="@string/correct"
            tools:textColor="@color/green" />

    </LinearLayout>

</LinearLayout>